Fix marker alignment

--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,8 @@
 
     --timeline-bar: 220 14% 14%;
     --timeline-night: 220 16% 10%;
-    --timeline-shoulder: 220 10% 20%;
-    --timeline-work: 220 8% 32%;
+    --timeline-shoulder: 220 10% 24%;
+    --timeline-work: 220 8% 38%;
     --now-line: 280 50% 60%;
     --hover-line: 142 60% 50%;
 
